fixed camera stretch bug

--- a/src/css/camera.scss
+++ b/src/css/camera.scss
@@ -63,7 +63,7 @@
 .flashIcon {
   position: absolute;
   right: 20px;
-  top: 150px;
+  top: 70px;
 }
 .zoomSlider {
   width: 85%;
@@ -73,7 +73,7 @@
 .sliderContainer {
   position: absolute;
   right: -38px;
-  top: 240px;
+  top: 160px;
   width: 150px;
 }
 .placeholderSlider {
